--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -50,7 +50,7 @@
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-danger">108 單招小計*</small>
-			<input type="number" min="0" class="form-control bg-success selfSum quota graduated_self_enrollment_quota required">
+			<input type="number" min="0" class="form-control bg-success text-white selfSum quota graduated_self_enrollment_quota required">
 		</div>
 	</div>
 	<span class="operator">＝</span>
@@ -66,35 +66,35 @@
 	<div style="width:9%; margin-left:15px"><!--class="col-1"-->
 		<div class="form-group">
 			<small class="form-text text-muted">學士班個人申請</small>
-			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info quota admission_placement_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技</small>
-			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-danger">單招*</small>
-			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota required">
+			<input type="number" min="0" class="form-control bg-success text-white quota self_enrollment_quota required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技單招</small>
-			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
+			<input type="text" class="form-control bg-success text-white quota another_department_self_enrollment_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＝</span>
@@ -110,35 +110,35 @@
 	<div style="width:9%; margin-left:15px"> <!--class="col-1"-->
 		<div class="form-group">
 			<small class="form-text text-muted">學士班個人申請</small>
-			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info quota another_department_admission_placement_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota another_department_admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技</small>
-			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
+			<input type="text" class="form-control bg-info text-white quota admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-danger">單招*</small>
-			<input type="number" min="0" class="form-control bg-success quota another_department_self_enrollment_quota twoyear required">
+			<input type="number" min="0" class="form-control bg-success text-white quota another_department_self_enrollment_quota twoyear required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-danger">港二技單招*</small>
-			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota twoyear required">
+			<input type="number" min="0" class="form-control bg-success text-white quota self_enrollment_quota twoyear required">
 		</div>
 	</div>
 	<span class="operator">＝</span>
@@ -155,14 +155,14 @@
 	<div style="width:33%;"> <!--class="col-3 "-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">108 聯招小計</small>
-			<input type="text" class="form-control bg-info quota admissionSum" disabled>
+			<input type="text" class="form-control bg-info text-white quota admissionSum" disabled>
 		</div>
 	</div>
 	<span>　　　</span>
 	<div style="width:19%;"> <!--class="col-2"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">108 單招小計</small>
-			<input type="text" class="form-control bg-success quota selfSum" disabled>
+			<input type="text" class="form-control bg-success text-white quota selfSum" disabled>
 		</div>
 	</div>
 </div>
