港二技名額調查頁面移除調查學士班名額

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -86,7 +86,7 @@
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-danger">單招*</small>
+			<small id="" class="form-text text-danger">學士班單招*</small>
 			<input type="number" min="0" class="form-control bg-success text-white quota self_enrollment_quota required">
 		</div>
 	</div>
@@ -130,8 +130,8 @@
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-danger">單招*</small>
-			<input type="number" min="0" class="form-control bg-success text-white quota another_department_self_enrollment_quota twoyear required">
+			<small id="" class="form-text">學士班單招</small>
+			<input type="text" class="form-control bg-success text-white quota another_department_self_enrollment_quota twoyear" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
