字體顏色錯了XD

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -130,7 +130,7 @@
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text">學士班單招</small>
+			<small id="" class="form-text text-muted">學士班單招</small>
 			<input type="text" class="form-control bg-success text-white quota another_department_self_enrollment_quota twoyear" disabled>
 		</div>
 	</div>
