修改文字敘述

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -79,7 +79,7 @@
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技</small>
+			<small id="" class="form-text text-muted">港二技聯招</small>
 			<input type="text" class="form-control bg-info text-white quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
@@ -123,7 +123,7 @@
 	<span class="operator">＋</span>
 	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技</small>
+			<small id="" class="form-text text-muted">港二技聯招</small>
 			<input type="text" class="form-control bg-info text-white quota admission_selection_quota" disabled>
 		</div>
 	</div>
