停用學士班系所類組編輯

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -161,7 +161,7 @@
 						<% if(system == 'bachelor') { -%>
 							<div id="groupCodeForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">類組*</label>
-								<select class="form-control" id="groupCode">
+								<select class="form-control" id="groupCode" disabled>
 									<option value="1">第一類組</option>
 									<option value="2">第二類組</option>
 									<option value="3">第三類組</option>
