完成系所排序功能

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -175,10 +175,10 @@
 <div class="row mt-5 bacheOnly hide">
 	<div class="col-12">
 		<h3>系所列表</h3>
-		<table id="table-bacheDeptList" class="table table-hover sortable">
+		<table id="table-bacheDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th>#</th>
+					<th>系所排序</th>
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px;">個人申請名額</th>
@@ -214,18 +214,18 @@
 <div class="row mt-5 twoYearOnly hide">
 	<div class="col-12">
 		<h3>系所列表</h3>
-		<table id="table-twoYearDeptList" class="table table-hover sortable">
+		<table id="table-twoYearDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th>#</th>
+					<th>系所排序</th>
 					<th>代碼</th>
 					<th>名稱</th>
-                    <th style="width: 150px" class="text-center">是否開設日間二技學制</th>
-                    <th style="width: 100px" class="text-center">是否單招</th>
-                    <th style="width: 100px" class="text-center">是否開設僑生專班</th>
-                    <th style="width: 100px" class="text-center">開設專班文號</th>
-                    <th style="width: 100px" class="text-center">開設專班文件電子檔</th>
-					<th style="width: 150px" class="text-center">聯招名額數</th>
+                    <th style="width: 6%" class="text-center">是否開設日間二技學制</th>
+                    <th style="width: 6%" class="text-center">是否單招</th>
+                    <th style="width: 6%" class="text-center">是否開設僑生專班</th>
+                    <th style="width: 15%" class="text-center">開設專班文號</th>
+                    <th style="width: 7%" class="text-center">開設專班文件電子檔</th>
+					<th style="width: 7%" class="text-center">聯招名額數</th>
 
 				</tr>
 			</thead>
@@ -250,10 +250,10 @@
 <div class="row mt-5 masterOnly phdOnly hide">
 	<div class="col-12">
 		<h3>系所列表</h3>
-		<table id="table-masterPhdDeptList" class="table table-hover sortable">
+		<table id="table-masterPhdDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th>#</th>
+					<th style="width: 8%">系所排序</th>
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px">聯招名額數</th>
