移除系所資料的排序欄位

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -96,7 +96,7 @@
 											簡章順序
 										</div>
 									</div>
-									<input type="text" class="form-control" id="sortOrder">
+									<input type="text" class="form-control" id="sortOrder" disabled>
 								</div>
 							</div>
 						</div>
