救救小螢幕

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -178,15 +178,15 @@
 		<table id="table-bacheDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th>簡章順序</th>
+					<th style="width:100px">簡章順序</th>
 					<th>代碼</th>
 					<th>名稱</th>
-					<th style="width: 150px;">個人申請名額</th>
-					<th style="width: 125px;">餘額流用 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="個人申請分發後之餘額是否流用至聯合分發？若要流用，請勾選"></i></th>
-					<th style="width: 150px;">聯合分發名額</th>
+					<th style="width: 100px;">個人申請名額</th>
+					<th style="width: 100px;">餘額流用 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="個人申請分發後之餘額是否流用至聯合分發？若要流用，請勾選"></i></th>
+					<th style="width: 100px;">聯合分發名額</th>
 					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發名額數不得低於參考值"></i></th>
 					<th style="width: 150px;">減招原因</th>
-					<th style="width: 100px;">是否單招</th>
+					<th style="width: 90px;">是否單招</th>
 					<th style="width: 100px;">小計</th>
 				</tr>
 			</thead>
@@ -217,15 +217,15 @@
 		<table id="table-twoYearDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th>簡章順序</th>
+					<th style="width:100px">簡章順序</th>
 					<th>代碼</th>
 					<th>名稱</th>
-                    <th style="width: 6%" class="text-center">是否開設日間二技學制</th>
-                    <th style="width: 6%" class="text-center">是否單招</th>
-                    <th style="width: 6%" class="text-center">是否開設僑生專班</th>
-                    <th style="width: 15%" class="text-center">開設專班文號</th>
-                    <th style="width: 7%" class="text-center">開設專班文件電子檔</th>
-					<th style="width: 7%" class="text-center">聯招名額數</th>
+                    <th style="width: 95px" class="text-center">是否開設日間二技學制</th>
+                    <th style="width: 95px" class="text-center">是否單招</th>
+                    <th style="width: 95px" class="text-center">是否開設僑生專班</th>
+                    <th style="width: 150px" class="text-center">開設專班文號</th>
+                    <th style="width: 100px" class="text-center">開設專班文件電子檔</th>
+					<th style="width: 120px" class="text-center">聯招名額數</th>
 
 				</tr>
 			</thead>
@@ -253,7 +253,7 @@
 		<table id="table-masterPhdDeptList" class="table table-hover">
 			<thead>
 				<tr>
-					<th style="width: 8%">簡章順序</th>
+					<th style="width:100px">簡章順序</th>
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px">聯招名額數</th>
