--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -457,9 +457,9 @@
 							</div>
 						</div>
 
-						<div class="row" style="display:none;">
+						<div class="row">
 							<div id="memoForm" class="form-group col">
-								<label class="form-control-label" for="">Memo</label>
+								<label class="form-control-label" for="memo">Memo</label>
 								<textarea class="form-control" rows="4" id="memo"></textarea>
 							</div>
 						</div>
@@ -469,7 +469,7 @@
 
 			<div class="modal-footer">
 				<button type="button" class="btn btn-primary" id="deptDetailSave">儲存</button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">離開</button>
+        		<button type="button" class="btn btn-danger" data-dismiss="modal">離開</button>
 			</div>
 
 		</div>
