--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -182,8 +182,9 @@
 							<div id="moeCheckFailedForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for=""><br />是否經教育部查核被列為持續列管或不通過*</label>
 								<select class="form-control" id="moeCheckFailed">
-									<option value="N">通過</option>
-									<option value="Y">為持續列管或不通過（不得提供僑生名額）</option>
+									<option value="2">未納入查核</option>
+									<option value="0">通過</option>
+									<option value="1">為持續列管或不通過（不得提供僑生名額）</option>
 								</select>
 							</div>
 							<div id="teacherQualityPassedForm" class="form-group col-6">
