新增類組編輯需求調查表單的連結

--- a/index.ejs
+++ b/index.ejs
@@ -10,11 +10,22 @@
 				<input type="text" id="schoolId" class="form-control" disabled>
 			</div>
 		</div>
-		<div class="col-3 offset-3 text-center float-right">
-			<button class="btn btn-success btn-lg" id="downloadExcel">
-				下載學校清冊 Excel
-			</button>
-		</div>
+		<ul class="list-inline">
+			<li class="list-inline-item">
+				<div class="col-3 offset-3 text-center float-left">
+					<a href="https://goo.gl/forms/wThnOFYcB7xjTVqm1" class="btn btn-primary btn-lg" target="_blank">
+						新增系所、系所變更類組或更名申請
+					</a>
+				</div>
+			</li>
+			<li class="list-inline-item">
+				<div class="col-3 offset-3 text-center float-left">
+					<button class="btn btn-success btn-lg" id="downloadExcel">
+						下載學校清冊 Excel
+					</button>
+				</div>
+			</li>
+		</ul>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
