--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -129,7 +129,7 @@
 								<label class="form-control-label" for="">中文名稱</label>
 								<input type="text" class="form-control" id="title" disabled>
 							</div>
-							<div class="form-group col-6">
+							<div id="engTitleForm" class="form-group col-6">
 								<label class="form-control-label" for="">英文名稱</label>
 								<input type="text" class="form-control" id="engTitle" disabled>
 							</div>
