--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -458,7 +458,7 @@
 							</div>
 						</div>
 
-						<div class="row">
+						<div class="row" hidden>
 							<div id="memoForm" class="form-group col">
 								<label class="form-control-label" for="memo">Memo</label>
 								<textarea class="form-control" rows="4" id="memo"></textarea>
