--- a/login.ejs
+++ b/login.ejs
@@ -49,15 +49,16 @@
 		</form>
 	</div>
 </div>
-<div class="row" style="padding-bottom: 5%; color:crimson">
+<div class="row" style="padding-bottom: 5%; color:crimson;">
 	<div class="col-md-12" style="text-align: center">
-		欲申請僑生名額增量之學校，務必下載並填列<a href="https://api.overseas.ncnu.edu.tw:8443/forms/海聯108僑生專案擴增名額調查表.xlsx" target="_blank">「108僑生名額增量調查表」</a>，
-	</div>
-	<div class="col-md-12" style="text-align: center">
-		於107年6月20日（星期三）前備文敘明擬增量之班別且檢附前開增量調查表向教育部提出申請，
-	</div>
-	<div class="col-md-12" style="text-align: center">
-		副知本會並將調查表電子檔併寄至本會電子郵件信箱（overseassurvey@gmail.com）俾利彙整。
+		<ul>
+			<li>
+				<span style="color:blue">因8/17埔里地震影響機臺，導致名額暨簡章分則系統無法操作，耽誤各校承辦人填報作業，特此致歉。本系統將</span>順延至星期三（8/22）下午5:00關閉<span style="color:blue;">，敬請各校於期限內完成填報並回傳，謝謝！</span>
+			</li>
+			<li>
+				回傳方式：確認名額及分則內容無誤後，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：049-2911182，電郵信箱：overseassurvey@gmail.com）始完成簡章填報作業。
+			</li>
+		</ul>
 	</div>
 </div>
 <script src="https://rawgit.com/emn178/js-sha256/master/src/sha256.js"></script>
