非常不穩定之大家不要登入的公告

--- a/login.ejs
+++ b/login.ejs
@@ -51,6 +51,9 @@
 </div>
 <div class="row" style="padding-bottom: 5%; color:crimson;">
 	<div class="col-md-12" style="text-align: center">
+		<div style="color: red; background-color: lightgoldenrodyellow; border-radius: 25px; font-weight:bolder; margin-bottom:3%;">
+			目前系統尚屬不穩定狀態，請各承辦人稍晚再進入填報；<br /> 待系統人員檢修後將第一時間公佈於此，謝謝大家。
+		</div>
 		<ul>
 			<li>
 				<span style="color:blue">因8/17埔里地震影響機臺，導致名額暨簡章分則系統無法操作，耽誤各校承辦人填報作業，特此致歉。本系統將</span>順延至星期三（8/22）下午5:00關閉<span style="color:blue;">，敬請各校於期限內完成填報並回傳，謝謝！</span>
