--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -49,7 +49,7 @@
 					</div>
 					<div id="userSchool"><!-- 國立暨南國際大學 --></div>
 					<div id="userName"><!-- 吳富悅 --></div><br />
-					<button id="btn-editAccount" class="btn btn-outline-dark btn-block">編輯</button>
+					<button id="btn-editAccount" class="btn btn-outline-dark btn-block">編輯帳號資料</button>
 					<button id="btn-logout" class="btn btn-outline-dark btn-block">登出</button>
 				</div>
 			</div>
