修改第一階段總量界面

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -36,7 +36,7 @@
 						<a style="" href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
 						<a style="" href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
 						<a style="" href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
-						<a style="display:none" href="./systemQuota.html" class="list-group-item list-group-item-action category">名額調查&nbsp;&nbsp;</a>
+						<a style="" href="./systemQuota.html" class="list-group-item list-group-item-action category">名額調查&nbsp;&nbsp;</a>
 					</div>
 				</div>
 			</div>
