--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -135,64 +135,64 @@
 
 
 
-<table style="border:3px #cccccc solid;" cellpadding="10" border='1'>
+<table style="border:4px #CFAA9E solid;" cellpadding="12" border='2'>
 	<tr>
-		<th>班別</th>
-		<th>核定總量</th>
-		<th>上限（總量10％）</th>
+		<th style="border-right:3px #CFAA9E solid; width:7%">班別</th>
+		<th style="width:9%">核定總量</th>
+		<th style="border-right:3px #CFAA9E solid; width:9%">上限<br/>（總量10％）</th>
 		<th>欲使用名額</th>
 		<th>班別間流用</th>
 		<th>本地生缺額</th>
-		<th>申請109增量</th>
+		<th style="border-right:3px #CFAA9E solid;">申請109增量</th>
 		<th>總實際招生名額</th>
 	</tr>
 	<tr id="bachelor_quota">
-		<td>學士班<br/>(含港二技)</td>
-		<td><input type="number" class="form-control" id="last_year_admission_amount_bache_multiply_10" disabled></td>
-		<td><input type="number" class="form-control" id="last_year_admission_amount_bache" disabled></td>
-		<td><input type="number" min="0" class="form-control" id="quota_used_bache" required></td>
-		<td><input type="number" class="form-control" id="quota_passed_bache" required></td>
-		<td><input type="number" min="0" class="form-control" id="last_year_surplus_admission_quota_bache" required></td>
-		<td><input type="number" min="0" class="form-control" id="expanded_quota_bache" required></td>
-		<td><input type="number" class="form-control" id="allowTotal_bache" disabled></td>
+		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;">學士班<br/>(含港二技)</td>
+		<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" id="last_year_admission_amount_bache_multiply_10" disabled></td>
+		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;" ><input type="number" class="form-control" id="last_year_admission_amount_bache" disabled></td>
+		<td style="border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" id="quota_used_bache" required></td>
+		<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" id="quota_passed_bache" required></td>
+		<td style="border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" id="last_year_surplus_admission_quota_bache" required></td>
+		<td style="border-right:3px #CFAA9E solid;border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" id="expanded_quota_bache" required></td>
+		<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" id="allowTotal_bache" disabled></td>
 	</tr>
 	<tr id="master_quota">
-		<td>碩士班</td>
+		<td style="border-right:3px #CFAA9E solid;">碩士班</td>
 		<td><input type="number" class="form-control" id="last_year_admission_amount_master_multiply_10" disabled></td>
-		<td><input type="number" class="form-control" id="last_year_admission_amount_master" disabled></td>
+		<td style="border-right:3px #CFAA9E  solid;"><input type="number" class="form-control" id="last_year_admission_amount_master" disabled></td>
 		<td><input type="number" min="0" class="form-control" id="quota_used_master" required></td>
 		<td><input type="number" class="form-control" id="quota_passed_master" required></td>
 		<td><input type="number" min="0" class="form-control" id="last_year_surplus_admission_quota_master" required></td>
-		<td><input type="number" min="0" class="form-control" id="expanded_quota_master" required></td>
+		<td style="border-right:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" id="expanded_quota_master" required></td>
 		<td><input type="number" class="form-control" id="allowTotal_master" disabled></td>
 	</tr>
 	<tr id="phd_quota">
-		<td>博士班</td>
+		<td style="border-right:3px #CFAA9E solid;">博士班</td>
 		<td><input type="number" class="form-control" id="last_year_admission_amount_phd_multiply_10" disabled></td>
-		<td><input type="number" class="form-control" id="last_year_admission_amount_phd" disabled></td>
+		<td style="border-right:3px #CFAA9E solid;"><input type="number" class="form-control" id="last_year_admission_amount_phd" disabled></td>
 		<td><input type="number" min="0" class="form-control" id="quota_used_phd" required></td>
 		<td><input type="number" class="form-control" id="quota_passed_phd" required></td>
 		<td><input type="number" min="0" class="form-control" id="last_year_surplus_admission_quota_phd" required></td>
-		<td><input type="number" min="0" class="form-control" id="expanded_quota_phd" required></td>
+		<td style="border-right:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" id="expanded_quota_phd" required></td>
 		<td><input type="number" class="form-control" id="allowTotal_phd" disabled></td>
 	</tr>
 </table>
-<hr />
-
-<table id="medicine_quota" style="border:3px #d3d61c solid;" cellpadding="10" border='1'>
+<br />
+<br />
+<table id="medicine_quota" style="border:4px #D499B9 solid;" cellpadding="10" border='1' align="center">
 	<tr>
-		<th>學士班總實際招生名額</th>
+		<th style="border-right:3px #D499B9 solid;">學士班總實際招生名額</th>
 		<th>醫學系</th>
 		<th>牙醫系</th>
-		<th>中醫系</th>
+		<th style="border-right:3px #D499B9 solid;">中醫系</th>
 		<th>其他科系可用名額</th>
 	</tr>
 	<tr>
-		<td><input type="number" class="form-control" id="allowTotal_bache_2" disabled></td>
-		<td><input type="number" min="0" class="form-control" id="quota_medicine" required></td>
-		<td><input type="number" min="0" class="form-control" id="quota_dentist" required></td>
-		<td><input type="number" min="0" class="form-control" id="quota_chinese_medicine" required></td>
-		<td><input type="number" class="form-control" id="allow_except_medicine" disabled></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" class="form-control" id="allowTotal_bache_2" disabled></td>
+		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine" required></td>
+		<td style="border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_dentist" required></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_chinese_medicine" required></td>
+		<td style="border-top:3px #D499B9 solid;"><input type="number" class="form-control" id="allow_except_medicine" disabled></td>
 	</tr>
 </table>
 
