隱藏「名額調查」、學校資料界面的文字變更
「.『新增系所、系所變更類組或更名申請」變成「新增系所、系所變更類組或分組」
2.「是否辦理單招*（如『有』請勾選，『無』則免勾）」更新為「貴校是否經教育部核定可辦理單招*（如「有」請勾選，「無」則免勾）」

--- a/index.ejs
+++ b/index.ejs
@@ -14,7 +14,7 @@
 			<li class="list-inline-item">
 				<div class="col-3 offset-3 text-center float-left">
 					<a href="https://goo.gl/forms/wThnOFYcB7xjTVqm1" class="btn btn-primary btn-lg" target="_blank">
-						新增系所、系所變更類組或更名申請
+						新增系所、系所變更類組或分組
 					</a>
 				</div>
 			</li>
@@ -221,7 +221,7 @@
 											<input id="hasSelfEnrollment" type="checkbox"/>
 										</div>
 									</div>
-									<input type="text" class="form-control" value="是否辦理單招*（如『有』請勾選，『無』則免勾）" disabled>
+									<input type="text" class="form-control" value="貴校是否經教育部核定可辦理單招*（如「有」請勾選，「無」則免勾）" disabled>
 								</div>
 							</div>
 						</div>
