--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -1,5 +1,5 @@
 <!-- 僅在 碩、博、二技 時顯示 -->
-<div class="row">
+<div class="row" style="display: none">
 	<div class="form-group col-6" id="admissionSelectionQuotaForm">
 		<label class="form-control-label" for="" id="quotaOtherLabel"></label>
 		<input type="text" class="form-control" id="admissionSelectionQuota" disabled>
