校資料 增加緬甸師培相關調查

--- a/index.ejs
+++ b/index.ejs
@@ -248,6 +248,50 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					緬甸華校師資培育專案（簡稱緬甸師培）
+				</div>
+				<div class="card-body">
+					<div class="card-block">
+						<div class="row">
+							<div class="form-group col-9">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<div class="input-group-text">
+											<input id="hasMyanmarTeacherEducation" type="checkbox"/>
+										</div>
+									</div>
+									<input type="text" class="form-control" value="是否招收緬甸師培生（限設有教育學程課程之大學校院勾選，不招收或無教育學程課程之大學校院則免勾）" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div id="myanmarEducationTeacherScholarshipForm" class="form-group col-12">
+								<label class="form-control-label text-danger" for="">緬甸師培專案專屬獎助學金</label>
+								<textarea id="myanmarScholarshipInfo" type="text" class="form-control" rows="8" ></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div id="myanmarEducationTeacherDormForm" class="form-group col-12">
+								<label class="form-control-label text-danger" for="">緬甸師培專案宿舍優惠說明</label>
+								<textarea id="myanmarDormInfo" type="text" class="form-control" rows="2"></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div id="myanmarEducationTeacherNoteForm" class="form-group col-12">
+								<label class="form-control-label text-danger" for="">備註</label>
+								<textarea id="myanmarNote" type="text" class="form-control" rows="2"></textarea>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
 		<div class="offset-2 col-2 text-center">
 			<button id="btn-save" data-action="save" class="btn btn-primary">
 				儲存
