修正系所簡介處的 placeholder
眼花不小心改成備審資料版，在改API的時候越看越不對勁（汗

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -222,13 +222,13 @@
 										請勿在此填寫個人申請繳交資料說明。
 									</li>
 								</ol>
-								<textarea class="form-control " rows="4" id="description" placeholder="請輸入詳細說明，如份數與類型（畢業證書 / 修業證明 / 離校證明 / 在學證明）等"></textarea>
+								<textarea class="form-control " rows="4" id="description" placeholder="請輸入系所中文描述"></textarea>
 							</div>
 						</div>
 						<div class="row">
 							<div id="engDescriptionForm" class="form-group col">
 								<label class="form-control-label text-danger" for="">英文系所簡介*</label>
-								<textarea class="form-control" rows="4" id="engDescription" placeholder="Please enter a detailed description in English, such as the number of copies and type (graduation certificate / enrollment certificate / leaving certificate / school attendance certificate), etc."></textarea>
+								<textarea class="form-control" rows="4" id="engDescription" placeholder="Please enter a description about this department in English."></textarea>
 							</div>
 						</div>
 
