加入核定系名、分組名稱兩個欄位，註解中文名稱後調整排版
順便更新了一些註解

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -142,10 +142,20 @@
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
-								<label class="form-control-label" for="">中文名稱</label>
-								<input type="text" class="form-control" id="title" disabled>
+								<label class="form-control-label" for="">核定系名</label>
+								<input type="text" class="form-control" id="titleMain" disabled>
 							</div>
 							<div id="engTitleForm" class="form-group col-6">
+								<label class="form-control-label" for="">分組名稱</label>
+								<input type="text" class="form-control" id="titleDivision" disabled>
+							</div>
+						</div>
+						<div class="row">
+							<!--<div class="form-group col-6">
+								<label class="form-control-label" for="">中文名稱</label>
+								<input type="text" class="form-control" id="title" disabled>
+							</div>-->
+							<div id="engTitleForm" class="form-group col-12">
 								<label class="form-control-label" for="">英文名稱</label>
 								<input type="text" class="form-control" id="engTitle" disabled>
 							</div>
