--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -200,6 +200,7 @@
 					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發名額數不得低於參考值"></i></th>
 					<th style="width: 150px;">減招原因</th>
 					<th style="width: 90px;">是否單招</th>
+					<th style="width: 110px;">是否招生緬甸師培生</th>
 					<th style="width: 100px;">小計</th>
 				</tr>
 			</thead>
