--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -146,7 +146,7 @@
 								<input type="text" class="form-control" id="titleMain" disabled>
 							</div>
 							<div id="engTitleForm" class="form-group col-6">
-								<label class="form-control-label" for="">分組名稱</label>
+								<label class="form-control-label" for="">招生分組</label>
 								<input type="text" class="form-control" id="titleDivision" disabled>
 							</div>
 						</div>
