109 學年度新增系所或系所更名、更改類組調查

--- a/index.ejs
+++ b/index.ejs
@@ -13,7 +13,7 @@
 		<ul class="list-inline">
 			<li class="list-inline-item">
 				<div class="col-3 offset-3 text-center float-left">
-					<a href="https://goo.gl/forms/wThnOFYcB7xjTVqm1" class="btn btn-primary btn-lg" target="_blank">
+					<a href="https://forms.gle/gwxaGDPWREsXsajNA" class="btn btn-primary btn-lg" target="_blank">
 						新增系所、系所變更類組或分組
 					</a>
 				</div>
