有招收緬甸師培生才可以選要不要勾「是否招收緬甸師培生」

--- a/index.ejs
+++ b/index.ejs
@@ -260,7 +260,7 @@
 								<div class="input-group">
 									<div class="input-group-prepend">
 										<div class="input-group-text">
-											<input id="hasMyanmarTeacherEducation" type="checkbox"/>
+											<input id="hasMyanmarTeacherEducation" type="checkbox" disabled/>
 										</div>
 									</div>
 									<input type="text" class="form-control" value="是否招收緬甸師培生（限設有教育學程課程之大學校院勾選，不招收或無教育學程課程之大學校院則免勾）" disabled>
