--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -452,7 +452,7 @@
 																<input type="email" class="form-control" v-model="type.recieve_email" v-bind:disabled="!type.need_paper || !type.needed" v-bind:class="{'is-invalid': type.recieve_email_error}">
 															</div>
 															<div class="form-group col-6" id="recieveDeadlineDiv">
-																<label class="text-danger">收件期限*</label>
+																<label class="text-danger">收件期限*（建議 01/10 前截止）</label>
 																<input id="recieveDeadline" type="text" class="form-control datepicker" v-bind:disabled="!type.need_paper || !type.needed">
 															</div>
 														</div>
