--- a/components/_accountEditModal.ejs
+++ b/components/_accountEditModal.ejs
@@ -18,14 +18,13 @@
 								<div class="col-6"></div>
 								<div class="form-group col-6">
 									<label>密碼(新密碼)</label>
-									<input type="password" class="form-control" name="password">
-									<small>若不更改密碼，請勿填寫</small>
+									<input type="password" class="form-control" name="password" placeholder="若不更改密碼，請勿填寫">
 								</div>
 								<div class="form-group col-6" id="password-check-div">
 									<label>再輸入一次</label>
 									<input type="password" class="form-control" name="password-second">
 									<div class="form-control-feedback hide" id="password-check">密碼不相符</div>
-								</div>	
+								</div>
 							</div>
 							<div class="row">
 								<div class="form-group col-6 text-danger">
