--- a/components/_accountEditModal.ejs
+++ b/components/_accountEditModal.ejs
@@ -19,6 +19,7 @@
 								<div class="form-group col-6">
 									<label>密碼(新密碼)</label>
 									<input type="password" class="form-control" name="password" placeholder="若不更改密碼，請勿填寫">
+									<div class="form-control-feedback hide text-info" id="password-complex">密碼複雜度不足！至少 <b>8</b> 碼並混合大寫、小寫、數字或特殊符號（限~!@#$%^&*()_+-=）<b>任兩種</b></div>
 								</div>
 								<div class="form-group col-6" id="password-check-div">
 									<label>再輸入一次</label>
