學校網址、電話、傳真改變 input type 讓 HTML 幫忙檢查
網址 url type 所有瀏覽器都支援
電話 tel type 只有少數支援，不支援的時候會自動轉為 text 不影響功能
https://www.w3schools.com/tags/att_input_type_tel.asp

--- a/index.ejs
+++ b/index.ejs
@@ -40,21 +40,21 @@
 	<div class="row">
 		<div id="phoneForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校電話號碼*</label>
-			<input id="phone" type="text" class="form-control">
+			<input id="phone" type="tel" class="form-control">
 		</div>
 		<div id="faxForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校傳真號碼*</label>
-			<input id="fax" type="text" class="form-control">
+			<input id="fax" type="tel" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div id="urlForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校中文網址*</label>
-			<input id="url" type="text" class="form-control">
+			<input id="url" type="url" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校英文網址*</label>
-			<input id="engUrl" type="text" class="form-control">
+			<input id="engUrl" type="url" class="form-control">
 		</div>
 	</div>
 	<div class="row">
