系所詳細資料網址輸入框改 url type

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -163,11 +163,11 @@
 						<div class="row">
 							<div id="urlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">系所中文網站網址*</label>
-								<input type="text" class="form-control " id="url">
+								<input type="url" class="form-control " id="url">
 							</div>
 							<div id="engUrlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">系所英文網站網址*</label>
-								<input type="text" class="form-control " id="engUrl">
+								<input type="url" class="form-control " id="engUrl">
 							</div>
 						</div>
 						<div class="row">
