名額調查新增班別流用說明資訊及表格填寫範例。

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -141,7 +141,7 @@
 		<th style="width:9%">核定總量</th>
 		<th style="border-right:3px #CFAA9E solid; width:9%">上限<br/>（總量10％）</th>
 		<th>欲使用名額</th>
-		<th>班別間流用</th>
+		<th>班別間流用 <i class="fa fa-info-circle" id="quota_passed_info" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="可以是負數，班別間流用相加為零即可。"></i></th>
 		<th>本地生缺額</th>
 		<th style="border-right:3px #CFAA9E solid;">申請109增量</th>
 		<th>總實際招生名額</th>
@@ -177,6 +177,64 @@
 		<td><input type="number" class="form-control" id="allowTotal_phd" disabled></td>
 	</tr>
 </table>
+<!--  名額調查表格填寫範例  所以不能輸入 數值也是寫死的 -->
+<div id="accordion">
+	<div class="card">
+		<div class="card-header" id="heading">
+		<h5 class="mb-0">
+			<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+				名額調查表格填寫範例
+			</button>
+		</h5>
+		</div>
+		<div id="collapseExample" class="collapse" aria-labelledby="heading" data-parent="#accordion">
+			<div class="card-body">
+				<table style="border:4px #CFAA9E solid;" cellpadding="12" border='2'>
+					<tr>
+						<th style="border-right:3px #CFAA9E solid; width:7%">班別</th>
+						<th style="width:9%">核定總量</th>
+						<th style="border-right:3px #CFAA9E solid; width:9%">上限<br/>（總量10％）</th>
+						<th>欲使用名額</th>
+						<th>班別間流用</th>
+						<th>本地生缺額</th>
+						<th style="border-right:3px #CFAA9E solid;">申請109增量</th>
+						<th>總實際招生名額</th>
+					</tr>
+					<tr id="bachelor_quota">
+						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;">學士班<br/>(含港二技)</td>
+						<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" value="1234" disabled></td>
+						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;" ><input type="number" class="form-control" value="123" disabled></td>
+						<td style="border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" value="123" disabled></td>
+						<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" value="-23" disabled></td>
+						<td style="border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" value="0" disabled></td>
+						<td style="border-right:3px #CFAA9E solid;border-top:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" value="0" disabled></td>
+						<td style="border-top:3px #CFAA9E solid;"><input type="number" class="form-control" value="100" disabled></td>
+					</tr>
+					<tr id="master_quota">
+						<td style="border-right:3px #CFAA9E solid;">碩士班</td>
+						<td><input type="number" class="form-control" value="666" disabled></td>
+						<td style="border-right:3px #CFAA9E  solid;"><input type="number" class="form-control" value="66" disabled></td>
+						<td><input type="number" min="0" class="form-control" value="66" disabled></td>
+						<td><input type="number" class="form-control" value="19" disabled></td>
+						<td><input type="number" min="0" class="form-control" value="5" disabled></td>
+						<td style="border-right:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" value="0" disabled></td>
+						<td><input type="number" class="form-control" value="90" disabled></td>
+					</tr>
+					<tr id="phd_quota">
+						<td style="border-right:3px #CFAA9E solid;">博士班</td>
+						<td><input type="number" class="form-control" value="94" disabled></td>
+						<td style="border-right:3px #CFAA9E solid;"><input type="number" class="form-control" value="9" disabled></td>
+						<td><input type="number" min="0" class="form-control" value="9" disabled></td>
+						<td><input type="number" class="form-control" value="4" disabled></td>
+						<td><input type="number" min="0" class="form-control" value="0" disabled></td>
+						<td style="border-right:3px #CFAA9E solid;"><input type="number" min="0" class="form-control" value="2" disabled></td>
+						<td><input type="number" class="form-control" value="15" disabled></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
 <br />
 <br />
 <table id="medicine_quota" style="border:4px #D499B9 solid;" cellpadding="10" border='1' align="center">
